--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="material-components-web.min.css">
 		<link rel="stylesheet" href="style.css">
-		<link rel="shortcut icon" type="image/png" href="favicon.png" />
+		<link rel="shortcut icon" type="image/png" href="logo/icon-64.png" />
 		<link rel="manifest" href="manifest.json" />
 	</head>
 	<body class="mdc-typography">
 		<header class="mdc-top-app-bar mdc-top-app-bar--fixed">
 			<div class="mdc-top-app-bar__row">
 				<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+					<img class="mdc-top-app-bar__title" id="header-main-icon" src="logo/icon-64.png"/>
 					<span class="mdc-top-app-bar__title" id="header-main-text">Options</span>
 				</section>
 				<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
