--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8"/>
 		<title>Helsinki Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Helsinki index" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<meta name="theme-color" content="#0072c6"/>
 		<link rel="stylesheet" href="material-components-web.min.css">
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" type="image/png" href="logo/icon-64.png" />
@@ -15,7 +15,7 @@
 		<header class="mdc-top-app-bar mdc-top-app-bar--fixed">
 			<div class="mdc-top-app-bar__row">
 				<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-					<img class="mdc-top-app-bar__title" id="header-main-icon" src="logo/icon-64.png"/>
+					<img class="mdc-top-app-bar__title" id="header-main-icon" src="logo/icon-64.png" alt="helsinki Logo"/>
 					<span class="mdc-top-app-bar__title" id="header-main-text">Options</span>
 				</section>
 				<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
@@ -29,7 +29,7 @@
 			<div class="filter">
 				<!-- Search field -->
 				<div class="mdc-text-field mdc-text-field--with-leading-icon">
-					<i class="material-icons mdc-text-field__icon">search</i>
+					<img class="mdc-text-field__icon" src="search.png"/>
 					<input class="mdc-text-field__input" type="text" id="search">
 					<div class="mdc-line-ripple"></div>
 					<label class="mdc-floating-label" for="search">Search</label>
