Add offline caching

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			</div>
 			<div class="paging">
 				<div id="how-many">&nbsp;</div>
+				<div id="data-date">&nbsp;</div>
 
 				<button class="mdc-button paging-first"><span class="mdc-button__label">First</span></button>
 				<button class="mdc-button paging-prev"><span class="mdc-button__label">Previous</span></button>
