Autofocus searchbar after page is loaded

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- Search field -->
 				<div class="mdc-text-field mdc-text-field--with-leading-icon">
 					<img class="mdc-text-field__icon" src="search.png"/>
-					<input class="mdc-text-field__input" type="text" id="search">
+					<input autofocus class="mdc-text-field__input" type="text" id="search">
 					<div class="mdc-line-ripple"></div>
 					<label class="mdc-floating-label" for="search">Search</label>
 				</div>
