Fix markdown in descriptions

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 		</main>
 		<script src="material-components-web.min.js"></script>
 		<script src="jquery-3.3.1.min.js"></script>
+		<script src="marked.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
